<resources>
    <!--Tab navigation-->
    <string name="app_name">ProjetAtelierEpsi2021-2022</string>
    <string name="text_magasins">Magasins</string>
    <string name="text_offres">Offres</string>
    <string name="text_carte">Carte</string>

    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- Compte générique-->
    <string name="text_adress">Adresse</string>
    <string name="text_zipcode">Code Postal   -    Ville </string>
    <string name="text_description">Description</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="email">Email</string>
    <string name="zipcode">Code Postal</string>
    <string name="city">Ville</string>
    <string name="create">Créer</string>
    <string name="formulaire">Remplir le formulaire manuellement</string>
    <string name="text_compte_modif">J\'enregistre les modifcations</string>
    <string name="titre">Titre</string>
</resources>