<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <EditText
                style="@style/LoginEdit"
                android:id="@+id/editNom"
                android:ems="10"
                android:inputType="none"
                android:hint="@string/nom"/>
            <EditText
                style="@style/LoginEdit"
                android:id="@+id/editPrenom"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="none"
                android:hint="@string/prenom" />
            <EditText
                style="@style/LoginEdit"
                android:id="@+id/editEmail"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />
            <EditText
                style="@style/LoginEdit"
                android:id="@+id/editAddress"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:hint="@string/text_adress" />
            <EditText
                style="@style/LoginEdit"
                android:id="@+id/editCodePostal"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:inputType="phone"
                android:hint="@string/zipcode" />
            <EditText
                style="@style/LoginEdit"
                android:id="@+id/editVille"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:hint="@string/city" />

            <Button
                android:id="@+id/buttonSubmitModif"
                android:layout_width="185dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_compte_modif" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>