<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <TextView
            style="@style/Tab"
            android:id="@+id/textViewCarte"
            android:background="@color/purple_500"
            android:text="@string/text_carte"/>

        <TextView
            style="@style/Tab"
            android:id="@+id/textViewOffres"
            android:background="@color/purple_200"
            android:text="@string/text_offres"/>

        <TextView
            style="@style/Tab"
            android:id="@+id/textViewMagasins"
            android:background="@color/purple_200"
            android:text="@string/text_magasins"/>
    </LinearLayout>

</LinearLayout>