<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <include
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/imageMagasin"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                tools:srcCompat="@tools:sample/backgrounds/scenic"/>
            <TextView
                android:id="@+id/textAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/text_adress" />
            <TextView
                android:id="@+id/textzipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/text_zipcode" />
            <TextView
                android:id="@+id/textdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:hint="@string/text_description" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>